[tool.poetry]
name = "book-price-hunter"
version = "0.1.0"
description = ""
authors = ["vovinov <v.v.ovinov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
selenium = "^4.27.1"
selenium-stealth = "^1.0.6"
django = "^5.1.4"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
